--- a/content/pip install 無法使用.html
+++ b/content/pip install 無法使用.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='40823109.html'>40823109</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='40823109.html'>40823109</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">40823109 << <a href='40823109.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>pip install 無法使用</h1>
+    <div id="tipue_search_content">啟動 leo 出現錯誤 << <a href='啟動 leo 出現錯誤.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>pip install 無法使用</h1>
 <p>原因 : 版本不一</p>
 <p>解決方法 : 用 HxD 將 pip.exe中的 pythonw.exe取代為 python.exe</p>
-<p><img alt="" height="279" src="./../images/1592530930939.jpg" width="539"/></p><br />40823109 << <a href='40823109.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+<p><img alt="" height="279" src="./../images/1592530930939.jpg" width="539"/></p><br />啟動 leo 出現錯誤 << <a href='啟動 leo 出現錯誤.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
         
     <!-- footer -->
       <div class="container">
