--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='40823109.html'>40823109</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='40823109.html'>40823109</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='pip install 無法使用.html'>Next</a> >> pip install 無法使用<br /><h1>40823109</h1>
+    <div id="tipue_search_content"> <a href='錯誤處理.html'>Next</a> >> 錯誤處理<br /><h1>40823109</h1>
 <p>PyPdf2</p>
 <p>可以用來切割，結合PDF檔</p>
 <p>(1)切割一段</p>
@@ -218,7 +218,7 @@ final_file_object = open('2020CMS.pdf', 'wb')
 pdf_write_object.write(final_file_object)
 final_file_object.close()
 </pre>
-<br /> <a href='pip install 無法使用.html'>Next</a> >> pip install 無法使用</div>
+<br /> <a href='錯誤處理.html'>Next</a> >> 錯誤處理</div>
         
     <!-- footer -->
       <div class="container">
