--- a/content/啟動 leo 出現錯誤.html
+++ b/content/啟動 leo 出現錯誤.html
@@ -158,7 +158,8 @@ img.add_border {
 <p>原因 : </p>
 <p>&gt;pythonw -u "launchLeo.py"<br/>Traceback (most recent call last):<br/> File "launchLeo.py", line 7, in &lt;module&gt;<br/> import leo.core.runLeo<br/>ModuleNotFoundError: No module named 'leo'<br/>&gt;Exit code: 1</p>
 <p><span>=&gt; ModuleNotFoundError: No module named 'leo' 沒有LEO模組</span></p>
-<p><span>解決方法 : 用 pip install leo 指令安裝 leo</span></p><br />錯誤處理 << <a href='錯誤處理.html'>Previous</a> <a href='pip install 無法使用.html'>Next</a> >> pip install 無法使用</div>
+<p><span>解決方法 : 用 pip install leo 指令安裝 leo</span></p>
+<p><span><img alt="" height="24" src="./../images/1592533128244.jpg" width="314"/></span></p><br />錯誤處理 << <a href='錯誤處理.html'>Previous</a> <a href='pip install 無法使用.html'>Next</a> >> pip install 無法使用</div>
         
     <!-- footer -->
       <div class="container">
