--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -142,7 +142,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='40823109.html'>40823109</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='First.html'>First</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -153,4 +153,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='40823109.html'>40823109</a><li><a href='錯誤處理.html'>錯誤處理</a><ul><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='First.html'>First</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li><a href='錯誤處理.html'>錯誤處理</a><ul><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li></ul></section></div></body></html>
