--- a/content/錯誤處理.html
+++ b/content/錯誤處理.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='40823109.html'>40823109</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='First.html'>First</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">40823109 << <a href='40823109.html'>Previous</a> <a href='啟動 leo 出現錯誤.html'>Next</a> >> 啟動 leo 出現錯誤<br /><h1>錯誤處理</h1>
-<br />40823109 << <a href='40823109.html'>Previous</a> <a href='啟動 leo 出現錯誤.html'>Next</a> >> 啟動 leo 出現錯誤</div>
+    <div id="tipue_search_content">PyPdf2 << <a href='PyPdf2.html'>Previous</a> <a href='啟動 leo 出現錯誤.html'>Next</a> >> 啟動 leo 出現錯誤<br /><h1>錯誤處理</h1>
+<br />PyPdf2 << <a href='PyPdf2.html'>Previous</a> <a href='啟動 leo 出現錯誤.html'>Next</a> >> 啟動 leo 出現錯誤</div>
         
     <!-- footer -->
       <div class="container">
