--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,6 @@
-<h1>First</h1><h1>SSH設定</h1>
+<h1>First</h1>
+<p>收尋使用 git 版本</p>
+<p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p><h1>SSH設定</h1>
 <p><span>利用 y:\portablegit\bin\sh.exe 進入 shell 命令環境後, 以</span></p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false"> ssh-keygen -t rsa -b 4096 -C "使用者學號"</pre>
 <p><img alt="" height="59" src="/images/1592577473981.jpg" width="279"/></p>
@@ -37,7 +39,7 @@ Host github.com
     TCPKeepAlive yes
     IdentitiesOnly yes
 </pre>
-<p><span>( 使用proxy才須此設定 )</span></p>
+<p><span>( 使用proxy才須使用接下來的設定 )</span></p>
 <p><span>最後再將 wcmj2020 倉儲中 .git 目錄下的 config 檔案中的連線協定, 由 https 改為採 ssh 連線: 範例如下:</span></p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">[core]
 	repositoryformatversion = 0
