--- a/content/First.html
+++ b/content/First.html
@@ -154,7 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='SSH設定.html'>Next</a> >> SSH設定<br /><h1>First</h1><br /> <a href='SSH設定.html'>Next</a> >> SSH設定</div>
+    <div id="tipue_search_content"> <a href='SSH設定.html'>Next</a> >> SSH設定<br /><h1>First</h1>
+<p>收尋所使用的 git 版本</p>
+<p><img alt="" height="50" src="./../images/1592618635507.jpg" width="296"/></p><br /> <a href='SSH設定.html'>Next</a> >> SSH設定</div>
         
     <!-- footer -->
       <div class="container">
