--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,5 @@
 <h1>First</h1>
-<p>收尋所使用的 git 版本</p>
+<p>搜尋所使用的 git 版本</p>
 <p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p><h1>SSH設定</h1>
 <p><span>利用 y:\portablegit\bin\sh.exe 進入 shell 命令環境後, 以</span></p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false"> ssh-keygen -t rsa -b 4096 -C "使用者學號"</pre>
