--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,23 @@
 <h1>First</h1>
-<p>收尋所使用的 git 版本</p>
-<p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p><h1>SSH設定</h1>
+<p>網站 : <a href="https://40823109.github.io/WCM2020">https://40823109.github.io/WCM2020</a></p>
+<p>倉儲 : <a href="https://github.com/40823109/WCM2020">https://github.com/40823109/WCM2020</a></p>
+<p>搜尋所使用的 git 版本</p>
+<p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p>
+<h1>建立網站程序</h1>
+<p>(1) 在 github 中，建立一個新的倉儲<img alt="" height="311" src="/images/1592897778423.jpg" width="390"/></p>
+<p>(2) 在隨身系統中建立一個新的資料夾 tmp2</p>
+<p><img alt="" height="235" src="/images/1592897969088.jpg" width="424"/></p>
+<p>(3) 使用指令 git clone 下剛建立的倉儲</p>
+<p><img alt="" height="90" src="/images/1592898033193.jpg" width="369"/></p>
+<p>(4) 使用 <span>git submodule add 裝入cmsimde 模組</span></p>
+<p><span><img alt="" height="14" src="/images/1592898352963.jpg" width="408"/></span></p>
+<p><span>(5) 進入 up_dir 將裡面的檔案複製到外面</span></p>
+<p><span><img caption="false" height="218" src="/images/1592898498228.jpg" width="309"/></span></p>
+<p><span><img alt="" height="231" src="/images/1592899264252.jpg" width="265"/></span></p>
+<p><span>(6) 進入cmsimde目錄下,將wsgi.py檔拉入SciTE中 執行</span></p>
+<p><span><img alt="" height="196" src="/images/1592898526936.jpg" width="285"/></span></p>
+<p><span>(7) 進入 https://127.0.0.1:9443/ 即完成建立網站</span></p>
+<p><span><img alt="" height="239" src="/images/1592898605643.jpg" width="386"/></span></p><h1>SSH設定</h1>
 <p><span>利用 y:\portablegit\bin\sh.exe 進入 shell 命令環境後, 以</span></p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false"> ssh-keygen -t rsa -b 4096 -C "使用者學號"</pre>
 <p><img alt="" height="59" src="/images/1592577473981.jpg" width="279"/></p>
