--- a/content/SSH設定.html
+++ b/content/SSH設定.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='First.html'>First</a><li><a href='建立網站程序.html'>建立網站程序</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='PyPdf2.html'>Next</a> >> PyPdf2<br /><h1>SSH設定</h1>
+    <div id="tipue_search_content">建立網站程序 << <a href='建立網站程序.html'>Previous</a> <a href='PyPdf2.html'>Next</a> >> PyPdf2<br /><h1>SSH設定</h1>
 <p><span>利用 y:\portablegit\bin\sh.exe 進入 shell 命令環境後, 以</span></p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false"> ssh-keygen -t rsa -b 4096 -C "使用者學號"</pre>
 <p><img alt="" height="59" src="./../images/1592577473981.jpg" width="279"/></p>
@@ -212,7 +212,7 @@ Host github.com
 	remote = origin
 	merge = refs/heads/master
 [submodule "cmsimde"]
-	url = https://github.com/mdecourse/cmsimde.git</pre><br />First << <a href='First.html'>Previous</a> <a href='PyPdf2.html'>Next</a> >> PyPdf2</div>
+	url = https://github.com/mdecourse/cmsimde.git</pre><br />建立網站程序 << <a href='建立網站程序.html'>Previous</a> <a href='PyPdf2.html'>Next</a> >> PyPdf2</div>
         
     <!-- footer -->
       <div class="container">
