--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='First.html'>First</a><li><a href='建立網站程序.html'>建立網站程序</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='SSH設定.html'>Next</a> >> SSH設定<br /><h1>First</h1>
+    <div id="tipue_search_content"> <a href='建立網站程序.html'>Next</a> >> 建立網站程序<br /><h1>First</h1>
+<p>網站 : <a href="https://40823109.github.io/WCM2020">https://40823109.github.io/WCM2020</a></p>
+<p>倉儲 : <a href="https://github.com/40823109/WCM2020">https://github.com/40823109/WCM2020</a></p>
 <p>搜尋所使用的 git 版本</p>
-<p><img alt="" height="50" src="./../images/1592618635507.jpg" width="296"/></p><br /> <a href='SSH設定.html'>Next</a> >> SSH設定</div>
+<p>指令 : git --version</p>
+<p><img alt="" height="50" src="./../images/1592618635507.jpg" width="296"/></p><br /> <a href='建立網站程序.html'>Next</a> >> 建立網站程序</div>
         
     <!-- footer -->
       <div class="container">
