--- a/content/建立網站程序.html
+++ b/content/建立網站程序.html
@@ -155,7 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='SSH設定.html'>Next</a> >> SSH設定<br /><h1>建立網站程序</h1>
-<p>(1) 在 github 中，建立一個新的倉儲<img alt="" height="311" src="./../images/1592897778423.jpg" width="390"/></p>
+<p>(1) 在 github 中，建立一個新的倉儲</p>
+<p><img alt="" height="311" src="./../images/1592897778423.jpg" width="390"/></p>
 <p>(2) 在隨身系統中建立一個新的資料夾 tmp2</p>
 <p><img alt="" height="235" src="./../images/1592897969088.jpg" width="424"/></p>
 <p>(3) 使用指令 git clone 下剛建立的倉儲</p>
