--- a/config/content.htm
+++ b/config/content.htm
@@ -4,7 +4,8 @@
 <p>搜尋所使用的 git 版本</p>
 <p>指令 : git --version</p>
 <p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p><h1>建立網站程序</h1>
-<p>(1) 在 github 中，建立一個新的倉儲<img alt="" height="311" src="/images/1592897778423.jpg" width="390"/></p>
+<p>(1) 在 github 中，建立一個新的倉儲</p>
+<p><img alt="" height="311" src="/images/1592897778423.jpg" width="390"/></p>
 <p>(2) 在隨身系統中建立一個新的資料夾 tmp2</p>
 <p><img alt="" height="235" src="/images/1592897969088.jpg" width="424"/></p>
 <p>(3) 使用指令 git clone 下剛建立的倉儲</p>
