--- a/content/使用GM帳號建立BLOG.html
+++ b/content/使用GM帳號建立BLOG.html
@@ -154,13 +154,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='使用GM帳號建立BLOG.html'>Next</a> >> 使用GM帳號建立BLOG<br /><h1>First</h1>
-<p>網站 : <a href="https://40823109.github.io/WCM2020">https://40823109.github.io/WCM2020</a></p>
-<p>倉儲 : <a href="https://github.com/40823109/WCM2020">https://github.com/40823109/WCM2020</a></p>
-<p>搜尋所使用的 git 版本</p>
-<p>指令 : git --version</p>
-<p><img alt="" height="50" src="./../images/1592618635507.jpg" width="296"/></p>
-<br /> <a href='使用GM帳號建立BLOG.html'>Next</a> >> 使用GM帳號建立BLOG</div>
+    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='建立網站程序.html'>Next</a> >> 建立網站程序<br /><h1>使用GM帳號建立BLOG</h1>
+<p>(1) google 搜尋 BLOG</p>
+<p><img alt="" height="228" src="./../images/messageImage_1592901527203.jpg" width="406"/></p>
+<p>(2) 使用GM帳號登入</p>
+<p><img alt="" height="231" src="./../images/messageImage_1592901144886.jpg" width="411"/></p>
+<p>(3) 建立網誌</p>
+<p><img alt="" height="230" src="./../images/messageImage_1592901168118.jpg" width="410"/></p>
+<p>(4) 點擊右下角+號可撰寫文章</p>
+<p><img alt="" height="234" src="./../images/messageImage_1592901289325.jpg" width="415"/></p>
+<p>(5) 撰寫內容後 點擊右上方飛機圖示可發布</p>
+<p><img alt="" height="235" src="./../images/messageImage_1592901364885.jpg" width="418"/></p>
+<p>(6) 完成後可在主頁面看見文章</p>
+<p><img alt="" height="235" src="./../images/messageImage_1592901406483.jpg" width="415"/></p>
+<p></p><br />First << <a href='First.html'>Previous</a> <a href='建立網站程序.html'>Next</a> >> 建立網站程序</div>
         
     <!-- footer -->
       <div class="container">
