--- a/content/建立網站程序.html
+++ b/content/建立網站程序.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='建立網站程序.html'>建立網站程序</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
+                     <li><a href='First.html'>First</a><li><a href='使用GM帳號建立BLOG.html'>使用GM帳號建立BLOG</a><li><a href='建立網站程序.html'>建立網站程序</a><li><a href='SSH設定.html'>SSH設定</a><li><a href='PyPdf2.html'>PyPdf2</a><li class='has-children'><a href='錯誤處理.html'>錯誤處理</a><ul class='dropdown'><li><a href='啟動 leo 出現錯誤.html'>啟動 leo 出現錯誤</a><li><a href='pip install 無法使用.html'>pip install 無法使用</a></li></ul><li><a href='Develop.html'>Develop</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='SSH設定.html'>Next</a> >> SSH設定<br /><h1>建立網站程序</h1>
+    <div id="tipue_search_content">使用GM帳號建立BLOG << <a href='使用GM帳號建立BLOG.html'>Previous</a> <a href='SSH設定.html'>Next</a> >> SSH設定<br /><h1>建立網站程序</h1>
 <p>(1) 在 github 中，建立一個新的倉儲</p>
 <p><img alt="" height="311" src="./../images/1592897778423.jpg" width="390"/></p>
 <p>(2) 在隨身系統中建立一個新的資料夾 tmp2</p>
@@ -169,7 +169,7 @@ img.add_border {
 <p><span>(6) 進入cmsimde目錄下,將wsgi.py檔拉入SciTE中 執行</span></p>
 <p><span><img alt="" height="196" src="./../images/1592898526936.jpg" width="285"/></span></p>
 <p><span>(7) 進入 https://127.0.0.1:9443/ 即完成建立網站</span></p>
-<p><span><img alt="" height="239" src="./../images/1592898605643.jpg" width="386"/></span></p><br />First << <a href='First.html'>Previous</a> <a href='SSH設定.html'>Next</a> >> SSH設定</div>
+<p><span><img alt="" height="239" src="./../images/1592898605643.jpg" width="386"/></span></p><br />使用GM帳號建立BLOG << <a href='使用GM帳號建立BLOG.html'>Previous</a> <a href='SSH設定.html'>Next</a> >> SSH設定</div>
         
     <!-- footer -->
       <div class="container">
