--- a/config/content.htm
+++ b/config/content.htm
@@ -3,7 +3,21 @@
 <p>倉儲 : <a href="https://github.com/40823109/WCM2020">https://github.com/40823109/WCM2020</a></p>
 <p>搜尋所使用的 git 版本</p>
 <p>指令 : git --version</p>
-<p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p><h1>建立網站程序</h1>
+<p><img alt="" height="50" src="/images/1592618635507.jpg" width="296"/></p>
+<h1>使用GM帳號建立BLOG</h1>
+<p>(1) google 搜尋 BLOG</p>
+<p><img alt="" height="228" src="/images/messageImage_1592901527203.jpg" width="406"/></p>
+<p>(2) 使用GM帳號登入</p>
+<p><img alt="" height="231" src="/images/messageImage_1592901144886.jpg" width="411"/></p>
+<p>(3) 建立網誌</p>
+<p><img alt="" height="230" src="/images/messageImage_1592901168118.jpg" width="410"/></p>
+<p>(4) 點擊右下角+號可撰寫文章</p>
+<p><img alt="" height="234" src="/images/messageImage_1592901289325.jpg" width="415"/></p>
+<p>(5) 撰寫內容後 點擊右上方飛機圖示可發布</p>
+<p><img alt="" height="235" src="/images/messageImage_1592901364885.jpg" width="418"/></p>
+<p>(6) 完成後可在主頁面看見文章</p>
+<p><img alt="" height="235" src="/images/messageImage_1592901406483.jpg" width="415"/></p>
+<p></p><h1>建立網站程序</h1>
 <p>(1) 在 github 中，建立一個新的倉儲</p>
 <p><img alt="" height="311" src="/images/1592897778423.jpg" width="390"/></p>
 <p>(2) 在隨身系統中建立一個新的資料夾 tmp2</p>
